Issue #3033845 by m.alhawwari: Fix overflow of table input field on smaller screens

--- a/less/vartheme-admin.theme.style.less
+++ b/less/vartheme-admin.theme.style.less
@@ -106,6 +106,17 @@ body .form-wrapper .counter {
 
 .details-wrapper {
   padding: 0.75em;
+
+  table {
+    @media (max-width: 1200px) {
+      table-layout: fixed;
+
+      .image-preview,
+      .image-widget-data {
+        float: none;
+      }
+    }
+  }
 }
 
 #edit-created-from,
